[project]
name = "pjecz-centauro-api-key"
version = "0.1.0"
description = "API para brindar informacion."
authors = [
    {name = "Guillermo Valdes",email = "guillermo@movimientolibre.com"}
]
license = {text = "AGPL3"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pymysql (>=1.1.1,<2.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "sqlalchemy-utils (>=0.41.2,<0.42.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "fastapi-pagination[sqlalchemy] (>=0.12.34,<0.13.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "cryptography (>=44.0.2,<45.0.0)",
    "hashids (>=1.3.1,<2.0.0)",
    "unidecode (>=1.3.8,<2.0.0)",
    "pytz (>=2025.1,<2026.0)",
    "google-auth (>=2.38.0,<3.0.0)",
    "google-cloud (>=0.34.0,<0.35.0)",
    "google-cloud-secret-manager (>=2.23.1,<3.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pylint = "^3.3.5"
pylint-sqlalchemy = "^0.3.0"
faker = "^37.0.0"

[tool.black]
line-length = 128

[tool.isort]
line_length = 128
profile = "black"
